app/src/main/java/com/example/andfactory/api/error/ApiErrorResponse.kt
package net.gahfy.mvvm_base.api.error

class ApiErrorResponse(
    val statusCode: Int,
    val statusMessage: String
)
